--- a/myproject/pubspec.yaml
+++ b/myproject/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   provider: ^6.0.4
+  http: ^0.13.5
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
